--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -11,3 +11,5 @@ lint:
     - SERVICE_SUFFIX
     - RPC_REQUEST_STANDARD_NAME
     - RPC_RESPONSE_STANDARD_NAME
+    # TODO
+    - FIELD_LOWER_SNAKE_CASE
