--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -2,18 +2,19 @@ name: Unit Tests
 
 on:
   pull_request:
+  push:
 
 jobs:
   unit-tests:
-
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up Go
+      - name: Install Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
 
       - name: Run Unit Tests
-        run: go test -race -v ./...
+        run: make test
